<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatusType"
        style="@style/headerTextStyle"
        android:text="@string/lbl_feedback"
        android:padding="@dimen/dimen_16dp"
        android:layout_gravity="start"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_name"
                style="@style/TextMedium.MavenProMedium"
                android:background="@drawable/bg_border_black"
                android:padding="@dimen/dimen_10dp"
                android:singleLine="true"
                android:imeOptions="actionNext"


                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:singleLine="true"
                android:background="@drawable/bg_border_black"
                android:padding="@dimen/dimen_10dp"
                style="@style/TextMedium.MavenProMedium"
                android:imeOptions="actionNext"


                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMessage"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_150dp"
                android:hint="@string/lbl_message"
                android:maxLines="5"
                android:gravity="start"
                android:background="@drawable/bg_border_black"
                android:padding="@dimen/dimen_10dp"
                style="@style/TextMedium.MavenProMedium"
                android:imeOptions="actionDone"


                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:background="@drawable/ic_button_shape"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/lbl_submit"/>


</LinearLayout>
